--- a/starwars/src/App.css
+++ b/starwars/src/App.css
@@ -6,3 +6,25 @@
   text-shadow: 1px 1px 5px #fff;
 }
 /* write your parent styles in here for your App.js */
+
+.container{
+  background: blue;
+  width: 100%;
+  max-width: 800px;
+  margin: 20px auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
+  color: white;
+  box-shadow: 0px 1px 6px -2px grey;
+  
+}
+
+h1 {
+  font-size: 25px;
+}
+
+h3 {
+  font-size: 15px;
+}
